--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+
+            <div class="destination" id="lahore">
+                <h2>lahore</h2>
+            </div>
+
+            <div class="destination" id="dallas">
+                <h2>dallas</h2>
+            </div>
+
+            <div class="destination" id="london">
+                <h2>london</h2>
+            </div>
+
         </div>
     </div>
 
